Objects diffuse color is visible in Object Mode while using Solid Viewport Shading, it does not work in Sculpt Mode. 2.63a does work all right, the oldest build I have that shows this bug is r47553.
Description
Description
Details
Details
- Type
- Bug
Comment Actions
Developer note:
This is a documented regression since sculpt mask implementation (http://wiki.blender.org/index.php/Dev:Ref/Release_Notes/2.64/Sculpting#Limitations). Would check whether it's easy to resolve before the release.
Comment Actions
I should have read the release notes before posting this, sorry. Thanks for checking this anyway, Sergey.
Comment Actions
Well, i've fixed the issue in svn rev50827, so would update release logs :)
Thanks for the report, closing it now.
Comment Actions
Unfortunately, something went wrong with this change. Reverted the changes, so 2.64 release would have new feature (which is sculpt masking), with some regressions (which is displaying mask in favor of diffuse color).
We would fix this properly after the release.
Re-opening the report.